v2. Hỗ trợ xuất ra màn hình LCD 16x2

--- a/SRF05/SRF05.vcxproj.filters
+++ b/SRF05/SRF05.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="uart.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="lcd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
