v2. Hỗ trợ xuất ra lcd 16x2. Chuyển sang dạng hàm

--- a/SRF05/SRF05.vcxproj
+++ b/SRF05/SRF05.vcxproj
@@ -149,8 +149,8 @@
     <ClCompile Include="SRF05.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="configuration.h" />
     <ClInclude Include="lcd.h" />
+    <ClInclude Include="srf05.h" />
     <ClInclude Include="uart.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
