--- a/SRF05/SRF05.vcxproj.filters
+++ b/SRF05/SRF05.vcxproj.filters
@@ -23,13 +23,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="configuration.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="uart.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="lcd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="srf05.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
